content/_generated-doc/2.7/config/quarkus-elytron-security-ldap-config-attribute-mapping-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-ldap-config-attribute-mapping-config_configuration]]link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".from]`

[.description]
--
The roleAttributeId from which is mapped (e.g. "cn")
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".to]`

[.description]
--
The identifier whom the attribute is mapped to (in Quarkus: "groups", in WildFly this is "Roles")
--|string 
|`groups`


a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter]`

[.description]
--
The filter (also named "roleFilter")
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter-base-dn]`

[.description]
--
The filter base dn (also named "rolesContextDn")
--|string 
|required icon:exclamation-circle[title=Configuration property is required]

|===