content/_generated-doc/3.0/config/quarkus-elytron-security-ldap-config-attribute-mapping-config.adoc

:summaryTableId: quarkus-elytron-security-ldap-config-attribute-mapping-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-ldap-config-attribute-mapping-config_configuration]]link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".from]`

[.description]
--
The roleAttributeId from which is mapped (e.g. "cn")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FROM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FROM+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".to]`

[.description]
--
The identifier whom the attribute is mapped to (in Quarkus: "groups", in WildFly this is "Roles")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__TO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__TO+++`
endif::add-copy-button-to-env-var[]
--|string 
|`groups`


a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter]`

[.description]
--
The filter (also named "roleFilter")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn]]`link:#quarkus-elytron-security-ldap-config-attribute-mapping-config_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter-base-dn]`

[.description]
--
The filter base dn (also named "rolesContextDn")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER_BASE_DN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER_BASE_DN+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]

|===